FEAT: implement get list agent pagination and add migration
